--- a/package.json
+++ b/package.json
@@ -6,23 +6,33 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predev": "npm run typegen",
+    "prebuild": "npm run typegen",
+    "typegen": "sanity schema extract --path=./sanity/extract.json && sanity typegen generate"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.82.0",
+    "@sentry/nextjs": "^9.11.0",
+    "@uiw/react-md-editor": "^4.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
-    "next": "15.2.4",
+    "markdown-it": "^14.1.0",
+    "next": "^15.2.4",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.9.9",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sanity": "^3.80.2-canary.17",
     "sanity-plugin-markdown": "^5.1.0",
+    "server-only": "^0.0.1",
+    "slugify": "^1.6.6",
+    "sonner": "^2.0.3",
     "styled-components": "^6.1.17",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5"
@@ -30,6 +40,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
